<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:text="@string/update_password"
        android:gravity="center"
        android:background="#D31632"
        android:textColor="#f9f9f9"
        android:textSize="22sp"
        />
    
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_oldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:layout_marginTop="@dimen/topMargin"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/endMargin"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_newPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:layout_marginTop="@dimen/topQuarterMargin"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/endMargin"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_confPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="@dimen/topQuarterMargin"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/endMargin"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/topMargin"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:text="@string/submit"/>

</LinearLayout>