<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistrationActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topMargin"
            android:hint="@string/name"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            android:hint="@string/age"
            android:inputType="number" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_age"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            android:hint="@string/weight"
            android:inputType="numberDecimal"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_weight"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            android:hint="@string/phone"
            android:inputType="phone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            android:hint="@string/email"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_confPassword"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            android:hint="@string/website"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_imageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_website"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            android:hint="@string/image_url"/>

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_imageUrl"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_gender"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            android:text="@string/notification_enabled"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_notification"
            app:layout_constraintTop_toBottomOf="@id/rg_gender"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topQuarterMargin"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_notification"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_registrationSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_notification"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginEnd="@dimen/endMargin"
            android:layout_marginTop="@dimen/topMargin"
            android:text="@string/register"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>